Java source info: return `:formatted-arglists` when possible (#192)
Fixes https://github.com/clojure-emacs/orchard/issues/190